fix(ui): dark mode override for toast notifications

--- a/ui/src/app/shared/dark-mode-overrides.scss
+++ b/ui/src/app/shared/dark-mode-overrides.scss
@@ -40,6 +40,11 @@ body.dark-theme {
             background-color: $dark-theme-background-2;
         }
     }
+
+    .Toastify__toast-theme--light {
+        background: $dark-theme-background-2;
+        color: $argo-color-gray-3;
+    }
 }
 
 .theme-dark {
